--- a/src/Logo/MiniLogo/MiniLogo.scss
+++ b/src/Logo/MiniLogo/MiniLogo.scss
@@ -12,7 +12,7 @@
 
     .logo-o {
         animation-name: mini-logo-o-trans-in;
-        animation-delay: .6s;
+        animation-delay: 0.6s;
         animation-duration: 0.2s;
         animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
         animation-iteration-count: 1;
@@ -22,7 +22,7 @@
 
     .logo-c {
         animation-name: mini-logo-c-trans-in;
-        animation-delay: .6s;
+        animation-delay: 0.6s;
         animation-duration: 0.2s;
         animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
         animation-iteration-count: 1;
@@ -60,65 +60,66 @@
         animation-fill-mode: forwards;
         opacity: 1;
     }
-
-    &:hover {
-        animation-name: logo-rotate-out;
-        animation-delay: 0.2s;
-        animation-duration: 0.2s;
-        animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
-        animation-iteration-count: 1;
-        animation-fill-mode: forwards;
-        transform: rotate(-90deg);
-
-        .logo-o {
-            animation-name: mini-logo-o-trans-out;
-            animation-duration: 0.2s;
-            animation-delay: 0s;
-            animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
-            animation-iteration-count: 1;
-            animation-fill-mode: forwards;
-            transform: translateY(3%);
-        }
-
-        .logo-c {
-            animation-name: mini-logo-c-trans-out;
-            animation-duration: 0.2s;
-            animation-delay: 0s;
-            animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
-            animation-iteration-count: 1;
-            animation-fill-mode: forwards;
-            transform: translateY(25%);
-        }
-
-        .logo-line {
-            animation-name: logo-line-out;
-            animation-delay: 0.4s;
-            animation-duration: 0.2s;
-            animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
-            animation-iteration-count: 1;
-            animation-fill-mode: forwards;
-            opacity: 0;
-        }
-
-        .logo-code {
-            animation-name: mini-logo-d-trans-out;
+    @media (hover: hover) {
+        &:hover {
+            animation-name: logo-rotate-out;
             animation-delay: 0.2s;
             animation-duration: 0.2s;
             animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
-            opacity: 0;
-            transform: translateY(25%);
-        }
+            transform: rotate(-90deg);
 
-        .eye {
-            animation-name: open-eyes-out;
-            animation-delay: .4s;
-            animation-duration: 0.2s;
-            animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
-            animation-iteration-count: 1;
-            animation-fill-mode: forwards;
-            opacity: 0;
+            .logo-o {
+                animation-name: mini-logo-o-trans-out;
+                animation-duration: 0.2s;
+                animation-delay: 0s;
+                animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+                transform: translateY(3%);
+            }
+
+            .logo-c {
+                animation-name: mini-logo-c-trans-out;
+                animation-duration: 0.2s;
+                animation-delay: 0s;
+                animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+                transform: translateY(25%);
+            }
+
+            .logo-line {
+                animation-name: logo-line-out;
+                animation-delay: 0.4s;
+                animation-duration: 0.2s;
+                animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+                opacity: 0;
+            }
+
+            .logo-code {
+                animation-name: mini-logo-d-trans-out;
+                animation-delay: 0.2s;
+                animation-duration: 0.2s;
+                animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+                opacity: 0;
+                transform: translateY(25%);
+            }
+
+            .eye {
+                animation-name: open-eyes-out;
+                animation-delay: 0.4s;
+                animation-duration: 0.2s;
+                animation-timing-function: cubic-bezier(0.18, 0, 0, 0.98);
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+                opacity: 0;
+            }
         }
     }
 }
